num_enum/tests/try_build/nightly/compile_fail/conflicting_default.stderr
error[E0119]: conflicting implementations of trait `std::default::Default` for type `Number`
 --> tests/try_build/nightly/compile_fail/conflicting_default.rs:3:19
  |
3 | #[derive(Default, num_enum::Default)]
  |          -------  ^^^^^^^^^^^^^^^^^ conflicting implementation for `Number`
  |          |
  |          first implementation here
  |
  = note: this error originates in the derive macro `num_enum::Default` (in Nightly builds, run with -Z macro-backtrace for more info)
